fix (MWPW-140360): fixes line spacing issues in double-bytes languages (#121)

--- a/less/components/consonant/localeOverrides.less
+++ b/less/components/consonant/localeOverrides.less
@@ -8,14 +8,16 @@
             font-family: inherit;
         }
 
-        &-CardsGrid.one-half .consonant-Card-title,
-        &-CardsGrid.half-height .consonant-Card-title {
-            font-size: 15px;
-            line-height: initial;
-        }
+        &-CardsGrid .consonant-Card {
+            &.one-half .consonant-Card-title,
+            &.half-height .consonant-Card-title {
+                font-size: 15px;
+                line-height: initial;
+            }
 
-        &-CardsGrid.one-half .consonant-Card-text {
-            line-height: 1.275rem;
+            &.one-half .consonant-Card-text {
+                line-height: 1.275rem;
+            }
         }
     }
 }
